# idevice

./: .gitignore  AGENTS.md  HOST.md  README.md  RECORD.md  pyproject.toml
.cursor/rules/: AGENTS.md
.cursor/skills/csp/: SKILL.md
.cursor/skills/publish/: SKILL.md
.github/workflows/: workflow.yml
docs/: ios-memory-graph-xctest.md  unity.md
examples/: README.md  android_device.py  host_example.py  ios3_device.py  record_example.py  xc_device.py
examples/UITestsTemplate/: README.md
examples/UITestsTemplate/UITests/: GameplayUITests.swift
examples/UITestsTemplate/UITestsTemplate.xcodeproj/: project.pbxproj
src/idevice/: __init__.py
src/idevice/device/: __init__.py  cache.py  config.py  device.py  factory.py
src/idevice/device/android/: __init__.py  device.py
src/idevice/device/base/: __init__.py  build.py  device.py  errors.py  prepare.py  runner.py  test.py  testing_bundle.py
src/idevice/device/dummy/: __init__.py  device.py
src/idevice/device/ios/: __init__.py  device.py
src/idevice/device/ios3/: __init__.py  device.py
src/idevice/device/windows/: __init__.py  device.py
src/idevice/device/xc/: __init__.py  device.py  testing_bundle.py
src/idevice/host/: __init__.py  config.py  errors.py  host.py  keeper.py  runner.py
src/idevice/host/base/: __init__.py  errors.py  host.py  keeper.py  runner.py
src/idevice/host/dummy/: __init__.py  host.py
src/idevice/host/mac/: __init__.py  host.py
src/idevice/host/macos/: __init__.py  host.py
src/idevice/record/: __init__.py  config.py  record.py
tests/: test_android_documents.py  test_config.py  test_device.py  test_factory.py  test_ios3_documents.py  test_ls.py  test_record_cleanup.py  test_screenshot.py  test_swipe.py  test_windows_device.py  test_xc_device.py  test_xc_testing_bundle.py
tests/device/: conftest.py  test_ios3_integration.py
(+16 files in other folders)
